--- a/game.htm
+++ b/game.htm
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="game.css">
  </head>
- <body>
+ <body onkeydown="keyboard.listenKeydown(event);" onkeyup="keyboard.listenKeyup(event);" oncontextmenu="return false;">
   <canvas id="gameScreen">Tu navegador no es compatible con el elemento canvas de html5. Use un navegador compatible.</canvas>
  </body>
+ <script src="game.js"></script>
 </html>
