--- a/game.htm
+++ b/game.htm
@@ -5,6 +5,11 @@
   <link rel="stylesheet" href="game.css">
  </head>
  <body onkeydown="keyboard.listenKeydown(event);" onkeyup="keyboard.listenKeyup(event);" oncontextmenu="return false;" onload="gameLoop();">
+  <audio id="bso" preload><source src="Sonidos/FoxSynergy - Chaos Lily.mp3" type="audio/mpeg" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
+  <audio id="disparoCell" preload><source src="Sonidos/skweak2.ogg" type="audio/ogg" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
+  <audio id="disparoGoku" preload><source src="Sonidos/skweak3.ogg" type="audio/ogg" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
+  <audio id="heridoCell" preload><source src="Sonidos/cut_grunt2.wav" type="audio/wav" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
+  <audio id="heridoGoku" preload><source src="Sonidos/gruntsound.wav" type="audio/wav" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
   <canvas id="gameScreen">Tu navegador no es compatible con el elemento canvas de html5. Use un navegador compatible.</canvas>
  </body>
  <script src="game.js"></script>
