--- a/game.htm
+++ b/game.htm
@@ -12,5 +12,6 @@
   <audio id="heridoGoku" preload><source src="Sonidos/gruntsound.wav" type="audio/wav" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
   <canvas id="gameScreen">Tu navegador no es compatible con el elemento canvas de html5. Use un navegador compatible.</canvas>
  </body>
+ <script src="stats.min.js"></script>
  <script src="game.js"></script>
 </html>
