Fix google analytics

--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
 
 		ga('create', 'UA-45433616-1', 'binary-sequence.github.io');
 		ga('send', 'pageview');
+		ga('send', 'pageview', {
+			'title': 'html5-goku-en-javascript'
+		});
  </script>
 </html>
