fix google analytics

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 		ga('create', 'UA-45433616-1', 'binary-sequence.github.io');
 		ga('send', 'pageview', {
+			'page': '/html5-goku-en-javascript',
 			'title': 'html5-goku-en-javascript'
 		});
  </script>
