fix google analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
  <head>
   <meta charset="UTF-8">
+  <title>html5-goku-en-javascript</title>
   <link rel="stylesheet" href="game.css">
  </head>
  <body onkeydown="keyboard.listenKeydown(event);" onkeyup="keyboard.listenKeyup(event);" oncontextmenu="return false;" onload="gameLoop();">
@@ -22,9 +23,6 @@
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 		ga('create', 'UA-45433616-1', 'binary-sequence.github.io');
-		ga('send', 'pageview', {
-			'page': '/html5-goku-en-javascript',
-			'title': 'html5-goku-en-javascript'
-		});
+		ga('send', 'pageview');
  </script>
 </html>
