Place assets in the new structure
This structure should make it easy to contribute with more assets.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" href="game.css">
  </head>
  <body onkeydown="keyboard.listenKeydown(event);" onkeyup="keyboard.listenKeyup(event);" oncontextmenu="return false;" onload="gameLoop();">
-  <audio id="ost" preload><source src="audio/FoxSynergy - Chaos Lily.mp3" type="audio/mpeg" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
-  <audio id="sound_cpu_shot" preload><source src="audio/skweak2.ogg" type="audio/ogg" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
-  <audio id="sound_user_shot" preload><source src="audio/skweak3.ogg" type="audio/ogg" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
-  <audio id="sound_cpu_hurt" preload><source src="audio/cut_grunt2.wav" type="audio/wav" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
-  <audio id="sound_user_hurt" preload><source src="audio/gruntsound.wav" type="audio/wav" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
+  <audio id="ost" preload><source src="assets/background_music/FoxSynergy - Chaos Lily.mp3" type="audio/mpeg" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
+  <audio id="sound_cpu_shot" preload><source src="assets/characters/dragon_ball_minicell/shot/skweak2.ogg" type="audio/ogg" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
+  <audio id="sound_user_shot" preload><source src="assets/characters/dragon_ball_goku/shot/skweak3.ogg" type="audio/ogg" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
+  <audio id="sound_cpu_hurt" preload><source src="assets/characters/dragon_ball_minicell/hurt/cut_grunt2.wav" type="audio/wav" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
+  <audio id="sound_user_hurt" preload><source src="assets/characters/dragon_ball_goku/hurt/gruntsound.wav" type="audio/wav" />Tu navegador no es compatible con el elemento audio de html5. Use un navegador compatible.</audio>
   <canvas id="gameScreen">Tu navegador no es compatible con el elemento canvas de html5. Use un navegador compatible.</canvas>
  </body>
  <script src="stats.min.js"></script>
